Fix Likely alignment

--- a/assets/main.styl
+++ b/assets/main.styl
@@ -276,9 +276,10 @@ button
     color: light-color
     margin: 0
     
-.likely
+.landing .likely
   width: 7.25rem
-  display: flex    
+  display: flex
+  justify-content: flex-end
   
 /* Media Queries */
 
